--- a/public/chainlit.css
+++ b/public/chainlit.css
@@ -1,8 +1,33 @@
 
 
+.cl-light-red-text { color: #f8006166; }
 .cl-red-text { color: #f80061; }
 .cl-red-bg { background-color: #f80061; }
 .cl-red-border { border: 1px solid #f80061; }
+.cl-force-wrap { overflow-wrap: break-word; }
+
+div.cl-description-container {
+    overflow-wrap: break-word;
+    padding: 10px;
+    padding-top: 0px;
+}
+
+div.cl-description-container a {
+    color: #f80061;
+    text-decoration-color: #f8006166;
+    font-weight: 500;
+}
+div.cl-description-container a:hover { text-decoration-color: #f80061; }
+
+div.cl-image-container {
+    padding: 8px;
+    box-sizing: border-box;
+    background-color: #212121;
+    border-radius: 4px;
+    display: flex;
+}
+
+.markdown-body img { display: block; }
 
 div.progress-container {
     width: 100%;
